--- a/application-dev.properties
+++ b/application-dev.properties
@@ -8,8 +8,8 @@ spring.servlet.multipart.location=c:/tmp/
 # redis
 spring.redis.host=192.168.1.155
 spring.redis.port=6379
-spring.redis.password=RonCoo.123
-spring.redis.database=5
+#spring.redis.password=RonCoo.123
+#spring.redis.database=5
 
 # zipkin
 spring.zipkin.sender.type=web
